# yororen-ui

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  README_zh_CN.md  clippy.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  component_issue.yml  docs_improvement.yml  feature_request.yml
codex-skills/yororen-ui-app-core/: SKILL.md
codex-skills/yororen-ui-recipes/: SKILL.md
codex-skills/yororen-ui-state-inputs/: SKILL.md
codex-skills/yororen-ui-user/: SKILL.md
demo/counter/: Cargo.toml
demo/file_browser/: Cargo.toml
demo/toast_notification/: Cargo.toml
demo/todolist/: Cargo.toml
src/: constants.rs  hover_refresh.rs  lib.rs  rtl.rs  theme.rs
src/a11y/: aria.rs  focus_trap.rs
src/animation/: constants.rs  easing.rs  helpers.rs  mod.rs  orchestrator.rs  preset.rs
src/component/: avatar.rs  badge.rs  button.rs  button_group.rs  callback.rs  card.rs  checkbox.rs  clickable_surface.rs  combo_box.rs  context_menu_trigger.rs  disclosure.rs  divider.rs  drag_handle.rs  dropdown_menu.rs  empty_state.rs  file_path_input.rs  focus_ring.rs  form.rs  heading.rs  helpers.rs  icon.rs  icon_button.rs  image.rs  keybinding_display.rs  keybinding_input.rs  label.rs  list_item.rs  mod.rs  modal.rs  number_input.rs  password_input.rs  popover.rs  progress.rs  radio.rs  radio_group.rs  search_input.rs  select.rs  shortcut_hint.rs  skeleton.rs  slider.rs  (+16 more)
src/i18n/: loader.rs  locale.rs  mod.rs  runtime.rs  translate.rs
src/notification/: center.rs  host.rs
src/widget/: titlebar.rs  (+1 more)
wiki/: About.md  Home.md
(+89 files in other folders)
